@@ -8,7 +8,10 @@
 
 package org.andor.core;
 
+import org.andor.core.android.AndroidDisplayRenderer;
 import org.lwjgl.opengl.GL11;
+
+import android.opengl.Matrix;
 
 public class Camera3D extends Object3D {
 	
@@ -71,22 +74,35 @@ public class Camera3D extends Object3D {
 	public void useView() {
 		//Get the rotation
 		Vector3D r = this.getRotation();
-		
-		//Rotate by the specified amount
-		GL11.glRotatef(r.x, 1, 0, 0);
-		GL11.glRotatef(r.y, 0, 1, 0);
-		GL11.glRotatef(r.z, 0, 0, 1);
-		
 		//Get the position
 		Vector3D p = this.getPosition();
-		
-		//Move to the correct position
-		GL11.glTranslatef(p.x, p.y, p.z);
-		
 		//Get the scale
 		Vector3D s = this.getScale();
 		
-		GL11.glScalef(s.x, s.y, s.z);
+		//Check to see whether Andor is currently running on Android
+		if (! Settings.AndroidMode) {
+			//Rotate by the specified amount
+			GL11.glRotatef(r.x, 1, 0, 0);
+			GL11.glRotatef(r.y, 0, 1, 0);
+			GL11.glRotatef(r.z, 0, 0, 1);
+			
+			//Move to the correct position
+			GL11.glTranslatef(p.x, p.y, p.z);
+			
+			//Scale by the correct amount
+			GL11.glScalef(s.x, s.y, s.z);
+		} else {
+			//Rotate by the specified amount
+			Matrix.rotateM(AndroidDisplayRenderer.mMVPMatrix, 0, r.x, 1, 0, 0);
+			Matrix.rotateM(AndroidDisplayRenderer.mMVPMatrix, 0, r.y, 0, 1, 0);
+			Matrix.rotateM(AndroidDisplayRenderer.mMVPMatrix, 0, r.z, 0, 0, 1);
+			
+			//Move to the correct position
+			Matrix.translateM(AndroidDisplayRenderer.mMVPMatrix, 0, p.x, p.y, p.z);
+			
+			//Scale by the correct amount
+			Matrix.scaleM(AndroidDisplayRenderer.mMVPMatrix, 0, s.x, s.y, s.z);
+		}
 		
 		//Check to see whether the skybox should be used
 		if (this.skyBox != null && this.useSkyBoxIfAvailable) {
