@@ -8,7 +8,12 @@
 
 package org.andor.core;
 
+import java.util.Arrays;
+
+import org.andor.core.android.AndroidDisplayRenderer;
 import org.lwjgl.opengl.GL11;
+
+import android.opengl.Matrix;
 
 public class RenderableObject2D extends Object2D {
 	
@@ -76,35 +81,48 @@ public class RenderableObject2D extends Object2D {
 	
 	/* The method used to render this object */
 	public void render() {
-		//Push the current matrix
-		GL11.glPushMatrix();
-		
 		//Get the position
 		Vector2D p = this.getPosition();
-		
-		//Move to the correct position (For rotating)
-		GL11.glTranslatef(p.x + this.width / 2, p.y + this.height / 2, 0);
-		
 		//Get the rotation
 		float r = this.getRotation();
-		
-		//Rotate by the specified amount
-		GL11.glRotatef(r, 0, 0, 1);
-		
 		//Get the scale
 		Vector2D s = this.getScale();
-		
-		//Scale the object
-		GL11.glScalef(s.x, s.y, 1);
-		
-		//Move to the correct position (For rendering)
-		GL11.glTranslatef(-this.width / 2, -this.height / 2, 0);
-		
-		//Render the object using the renderer
-		this.renderer.render();
-		
-		//Pop the current matrix
-		GL11.glPopMatrix();
+		//Check to see whether Andor is currently running on Android
+		if (! Settings.AndroidMode) {
+			//Push the current matrix
+			GL11.glPushMatrix();
+			
+			//Move to the correct position (For rotating)
+			GL11.glTranslatef(p.x + this.width / 2, p.y + this.height / 2, 0);
+			
+			//Rotate by the specified amount
+			GL11.glRotatef(r, 0, 0, 1);
+			
+			//Scale the object
+			GL11.glScalef(s.x, s.y, 1);
+			
+			//Move to the correct position (For rendering)
+			GL11.glTranslatef(-this.width / 2, -this.height / 2, 0);
+			
+			//Render the object using the renderer
+			this.renderer.render();
+			
+			//Pop the current matrix
+			GL11.glPopMatrix();
+		} else {
+			//Save the current matrix
+			float[] clone = Arrays.copyOf(AndroidDisplayRenderer.mMVPMatrix, AndroidDisplayRenderer.mMVPMatrix.length);
+			//Move to the correct position
+			Matrix.translateM(AndroidDisplayRenderer.mMVPMatrix, 0, p.x, p.y, 0);
+			//Rotate by the specified amount
+			Matrix.rotateM(AndroidDisplayRenderer.mMVPMatrix, 0, r, 0, 0, 1);
+			//Scale by the specified amount
+			Matrix.scaleM(AndroidDisplayRenderer.mMVPMatrix, 0, s.x, s.y, 0);
+			//Render the object using the renderer
+			this.renderer.render();
+			//Restore the current matrix
+			AndroidDisplayRenderer.mMVPMatrix = clone;
+		}
 	}
 	
 	/* The method used to setup this object given the render mode
