@@ -1,4 +1,9 @@
 ------------------------------------------------------
+Release 1 | Beta 2 | Development 2 | Experimental 4
+
+* More Android Support
+
+------------------------------------------------------
 Release 1 | Beta 2 | Development 2 | Experimental 3
   
 * Fixed bug: Delta became very large / FPS became
